# mslearn-mlops

./: pyproject.toml
.github/workflows/: 02-manual-trigger-job.yml  03-automate-trigger-job.yml  04-code-checks.yml
mlruns/0/0358def482a640a592c013e1ec3b4985/: meta.yaml
mlruns/0/205db7d1e745415cab59f1b38f8be351/: meta.yaml
mlruns/0/205db7d1e745415cab59f1b38f8be351/metrics/: training_f1_score  training_log_loss  training_precision_score  training_recall_score  training_roc_auc  training_score
mlruns/0/205db7d1e745415cab59f1b38f8be351/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/49bbda7d8fd040f09a56b1baa01cf5f9/: meta.yaml
mlruns/0/72cb80c4fe07421bbd231f83e39dd26e/: meta.yaml
mlruns/0/72cb80c4fe07421bbd231f83e39dd26e/metrics/: training_f1_score  training_log_loss  training_precision_score  training_recall_score  training_roc_auc  training_score
mlruns/0/72cb80c4fe07421bbd231f83e39dd26e/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/a2118fb4edb442b791863767a46081ed/: meta.yaml
mlruns/0/c296a100aca94b52b453fac9aafccd80/: meta.yaml
mlruns/0/c296a100aca94b52b453fac9aafccd80/metrics/: training_accuracy_score  training_f1_score  training_log_loss  training_precision_score  training_roc_auc  training_score
mlruns/0/c296a100aca94b52b453fac9aafccd80/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/datasets/ca7aa86bbc69e88a83f5ad611b7dcb49/: meta.yaml
notes/: 01-aml-job.md
src/: job.yml
src/model/: train.py
src/model/mlruns/0/: meta.yaml
src/model/mlruns/0/8e856452d26a47fc8c4370f59dd427d4/: meta.yaml
(+32 files in other folders)
