[tool.poetry]
name = "mslearn-mlops"
version = "0.1.0"
description = ""
authors = ["miladbehrooz <milad.behrooz68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "1.27.0"
pytest = "7.1.2"
pandas = "1.4.3"
scikit-learn = "1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
