[tool.poetry]
name = "mslearn-mlops"
version = "0.1.0"
description = ""
authors = ["miladbehrooz <milad.behrooz68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mlflow = "^2.20.3"
pytest = "7.1.2"
scikit-learn = "1.5.1"
protobuf = "3.20.3"
pandas = "^2.2.3"
numpy = "1.26"
matplotlib = "^3.10.1"
setuptools = "^75.8.2"
flake8 = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
